Remove TODOs, add LICENSE

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <title>Canvas Pong</title>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8"></meta>
 
     <style type="text/css">
       body {
@@ -71,14 +71,13 @@
 
     <div id="score"></div>
 
-    <script>
-      // TODO make the page unable to scroll after its over
-      // TODO validate
-      // TODO beautify, performance, general cleanup, release OSS, make website
-      // TODO see if there's a better way to put a <script> inside of a <canvas> and have it not eval'ed
-    </script>
-
     <script type="text/javascript">
+
+			/*
+				Author: John Crepezzi <john.crepezzi@gmail.com>
+				http://github.com/seejohnrun/canvas-pong
+				MIT License
+		  */
 
       function Paddle(context, paddleHeight) {
 
