Fix link onclick

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       var yourScore = 0;
 
       var gameRunning = false;
-      window.onmouseup = function() {
+      $canvas.onclick = function() {
 
         if (gameRunning) {
           return;
